--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "ArugaZ",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArugaZ/whatsapp-bot.git"
+    "url": "https://github.com/ridhoma08/dotitbotwa"
   },
   "bugs": {
-    "url": "https://github.com/ArugaZ/whatsapp-bot/issues"
+    "url": "https://github.com/ridhoma08/dotitbotwa/issues"
   },
-  "homepage": "https://github.com/ArugaZ/whatsapp-bot",
+  "homepage": "https://github.com/ridhoma08/dotitbotwa",
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^3.1.0",
